@@ -378,8 +378,8 @@ Select specified Lustre target by label(s).
 .TP
 .BI \-t \ <TARGETS>
 .
-Process only specified target list (comma\-separated). Valid targets are: mgt,
-mdt, ost, router. This option could be used several times.
+Process only specified component list (comma\-separated). Valid targets are: mgt,
+mdt, ost, router, client. This option could be used several times.
 .UNINDENT
 
 .INDENT 0.0
@@ -495,7 +495,7 @@ Tuning configuration file.
 .TP
 .B Use the following URL to submit a bug report or feedback:
 .
-\fI\%http://sourceforge.net/apps/trac/lustre\-shine/newticket\fP
+\fI\%http://sourceforge.net/p/lustre-shine/tickets/new/\fP
 .UNINDENT
 .SH AUTHOR
 A Degremont (CEA), J Fereyre (Bull), S Thiell (CEA)
