@@ -1,3 +1,7 @@
+2013-09-24 Aurelien Degremont <aurelien.degremont@cea.fr>
+	* -t option supports 'client' option (ticket #164).
+	* Fix message output in verbose mode (ticket #163).
+
 2013-09-02 Aurelien Degremont <aurelien.degremont@cea.fr>
 	* tuning.conf supports 'router' as node type (ticket #96).
 	* Remove code managing FS state in backend (ticket #161).
